# ai-marketing-agency

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: leads.csv
escale_ai/: README.md  __init__.py  agent_factory.py  base_team.py  client_team.py  config.py  demo.py  state.py
escale_ai/tools/: __init__.py  calendar_service.py  crm_service.py  email_service.py  lead_source.py
tests/: test_agent_factory.py
web_chat/: app.py
web_chat/static/: index.html
