[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-marketing-agency"
version = "0.1.0"
description = "AI Marketing Agency with autonomous agent teams"
authors = [{ name = "AI Developer", email = "developer@example.com" }]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "pydantic>=2.12.5",
]    "fastapi>=0.128.5",
    "uvicorn>=040.0"
]

